# privacy-proxy

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  action.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/privacy_proxy_cli/: Cargo.toml
crates/privacy_proxy_cli/src/: main.rs
crates/privacy_proxy_cli/tests/: cli.rs
crates/privacy_proxy_cli/tests/fixtures/: logs.jsonl  observability.jsonl
crates/privacy_proxy_core/: Cargo.toml
crates/privacy_proxy_core/benches/: redaction.rs
crates/privacy_proxy_core/src/: config.rs  engine.rs  error.rs  lib.rs  stats.rs
crates/privacy_proxy_core/tests/: properties.rs
crates/privacy_proxy_proxy/: Cargo.toml
crates/privacy_proxy_proxy/src/: lib.rs
docs/: integrations.md  performance.md  releasing.md
examples/: after.mask.jsonl  before.jsonl  logs.jsonl  privacy-proxy.toml
examples/observability/: loki.input.jsonl  loki.masked.jsonl  sentry.input.jsonl  sentry.masked.jsonl
fuzz/: Cargo.toml
fuzz/fuzz_targets/: redact_json.rs  redact_str.rs
scripts/: measure-memory.ps1  measure-memory.sh
