[package]
name = "privacy-proxy-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
privacy_proxy_core = { path = "../crates/privacy_proxy_core" }
serde_json = "1"

[[bin]]
name = "redact_str"
path = "fuzz_targets/redact_str.rs"
test = false
doc = false
bench = false

[[bin]]
name = "redact_json"
path = "fuzz_targets/redact_json.rs"
test = false
doc = false
bench = false

