[package]
name = "privacy_proxy_proxy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum = "0.7"
bytes = "1"
http = "1"
privacy_proxy_core = { path = "../privacy_proxy_core" }
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt"] }
tracing = "0.1"
url = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
